Add some logic to profile. 1. Subscribe / unsubscribe 2. Fixed some bugs